possible fix. always wrap image in container

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,7 @@
 
 .poster{
     aspect-ratio:5 / 8;
+    contain: content;
 }
 .navBut{
     border-color: rgba(59, 58, 58, 0.9);
